# omnivoice.cpp

./: .gitignore  CMakeLists.txt  README.md
docs/: ARCHITECTURE.md
eliza/: CMakeLists.txt  omnivoice_diagnostic.cpp
src/: audio-io.h  audio-postproc.h  debug.h  gguf-weights.h  hubert-enc.h  maskgit-tts.h  omnivoice.cpp  omnivoice.h  ov-error.h  pipeline-codec.cpp  pipeline-tts.cpp  pipeline-tts.h  qwen3-enc.h  text-chunker-stream.h  text-chunker.h
tests/: abi-c.c  cross-decode.py  debug-clone-cossim.py  debug-tts-cossim.py
tools/: omnivoice-codec.cpp  omnivoice-tts.cpp  quantize.cpp
